--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       type="module"
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
     ></script> -->
-    <script
+    <!-- <script
       type="text/javascript"
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
-    ></script>
+    ></script> -->
   </body>
 </html>
