--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Data & AI Enabled Services | POD-360</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- <script
-      type="module"
-      src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
-    ></script> -->
-    <!-- <script
-      type="text/javascript"
-      src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
-    ></script> -->
   </body>
 </html>
