--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data & AI Enabled Services | POD-360</title>
+    <title>Data & AI Enabled Services | POD-360™</title>
   </head>
   <body>
     <div id="root"></div>
