--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data & AI Enabled Services | POD-360™</title>
+    <title>Organizational Change - POD-360™</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://code.highcharts.com/12/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
   </body>
 </html>
