--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://code.highcharts.com/12/highcharts.js"></script>
-    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>\
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
   </body>
 </html>
